# IndianStartupIntelligence

./: .replit  app.py  apps2.py  pyproject.toml  replit.md
attached_assets/: startup_cleaned_1750747387667.csv
pages/: company_analysis.py  general_analysis.py  investor_analysis.py
utils/: chart_exporter.py  data_processor.py  pdf_generator.py  visualizations.py
